connor's refactor merge onto jetson's refactor